--- a/Semana_3/index.html
+++ b/Semana_3/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desarrollo de Aplicaciones Web - SEMANA 3</title>
+    <title>Desarrollo de Aplicaciones Web </title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
     <header>
-        <h1>Desarrollo de Aplicaciones Web - SEMANA 3</h1>
+        <h1>Desarrollo de Aplicaciones Web </h1>
         <nav>
             <ul>
                 <li><a href="#intro">Introducción</a></li>
